Updating BlazorWallet sample

--- a/Samples/BlazorWallet/BlazorWallet/Shared/Workshop.razor
+++ b/Samples/BlazorWallet/BlazorWallet/Shared/Workshop.razor
@@ -30,7 +30,7 @@
                     <input type="text"
                            id="hdPrivateKeyText"
                            style="word-wrap: break-word"
-                           @bind="@_extPrivateKeyText"
+                           @bind="@_hdPrivateKeyText"
                            readonly />
                     <span class="uk-margin-small-right iconRight"
                           uk-icon="copy"
