Upgraded BsvSharp Blazor sample to version 2.0.1

--- a/Samples/BlazorWallet/BlazorWallet/Shared/Workshop.razor
+++ b/Samples/BlazorWallet/BlazorWallet/Shared/Workshop.razor
@@ -11,7 +11,7 @@
                     <input type="text"
                            id="mnemonicText"
                            style="word-wrap: break-word"
-                           @bind="@_words" />
+                           @bind="@_phrase" />
 
                     <span class="uk-margin-small-right iconRight"
                           uk-icon="refresh"
